--- a/SozialWebApplication/SozialWebApplication/Web.config
+++ b/SozialWebApplication/SozialWebApplication/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SozialWebApplication-20150505053502.mdf;Initial Catalog=aspnet-SozialWebApplication-20150505053502;Integrated Security=True"
+    <add name="DefaultConnection"
+         connectionString="Data Source=hrnem.ru.is;Initial Catalog=VERK2015_H38;User ID=VERK2015_H38_usr;Password=fuzzyrule93"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
