--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Models\Entities\Group.cs" />
     <Compile Include="Models\Entities\Post.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Initialize\GroupInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
