--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Models\Entities\Post.cs" />
     <Compile Include="Models\Entities\PostConnection.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Initializers\GroupInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -225,7 +226,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\Initializers\" />
     <Folder Include="Models\ViewModel\" />
     <Folder Include="Repositories\" />
     <Folder Include="Services\" />
