bjo til user profile viw model

--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\GroupViewModel.cs" />
+    <Compile Include="ViewModel\UserProfileViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
