--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -221,7 +221,7 @@
     <Content Include="Views\Account\Manage.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\Newsfeed.cshtml" />
+    <Content Include="Views\Home\Banner.cshtml" />
     <Content Include="Views\Home\NameCard.cshtml" />
     <Content Include="Views\Home\OthersNameCard.cshtml" />
   </ItemGroup>
