--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -173,14 +173,29 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Banner.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\namecard.css" />
+    <Content Include="Content\CSS\Banner.css" />
+    <Content Include="Content\CSS\bootstrap.css" />
+    <Content Include="Content\CSS\bootstrap.min.css" />
+    <Content Include="Content\CSS\namecard.css" />
+    <Content Include="Content\Images\AddFollower.png" />
+    <Content Include="Content\Images\addgroup.png" />
+    <Content Include="Content\Images\DoubleMatch.png" />
+    <Content Include="Content\Images\Edit.png" />
+    <Content Include="Content\Images\Followers.png" />
+    <Content Include="Content\Images\groups.png" />
+    <Content Include="Content\Images\leavegroup.png" />
+    <Content Include="Content\Images\Like.png" />
+    <Content Include="Content\Images\Matched.png" />
+    <Content Include="Content\Images\Mynd.png" />
+    <Content Include="Content\Images\Photo.png" />
+    <Content Include="Content\Images\TextLogo.png" />
+    <Content Include="Content\Images\UnFollow.png" />
+    <Content Include="Content\Images\UnLike.png" />
+    <Content Include="Content\Images\Video.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\CSS\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ClassDiagram1.cd" />
@@ -228,7 +243,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\ViewModel\" />
-    <Folder Include="Pictures\" />
     <Folder Include="Repositories\" />
     <Folder Include="Services\" />
     <Folder Include="Views\LoginRegister\" />
