--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Models\Entities\PostConnection.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services2\PostService.cs" />
     <Compile Include="Services\GroupService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Startup.cs" />
