--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -167,8 +167,13 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Entities\Comment.cs" />
+    <Compile Include="Models\Entities\CommentConnection.cs" />
+    <Compile Include="Models\Entities\FollowerConnection.cs" />
     <Compile Include="Models\Entities\Group.cs" />
+    <Compile Include="Models\Entities\GroupConnection.cs" />
+    <Compile Include="Models\Entities\MatchConnection.cs" />
     <Compile Include="Models\Entities\Post.cs" />
+    <Compile Include="Models\Entities\PostConnection.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
