--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -176,6 +176,8 @@
     <Compile Include="Models\Entities\PostConnection.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GroupService.cs" />
+    <Compile Include="Services\UserService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -251,7 +253,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Models\ViewModel\" />
     <Folder Include="Repositories\" />
-    <Folder Include="Services\" />
     <Folder Include="Views\LoginRegister\" />
   </ItemGroup>
   <ItemGroup>
