--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -160,7 +160,6 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\NameCardController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -252,6 +251,7 @@
     <Folder Include="Models\ViewModel\" />
     <Folder Include="Repositories\" />
     <Folder Include="Services\" />
+    <Folder Include="Views\AllNameCards\" />
     <Folder Include="Views\LoginRegister\" />
   </ItemGroup>
   <ItemGroup>
