--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\NameCardsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -244,9 +245,9 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Banner.cshtml" />
-    <Content Include="Views\Home\NameCard.cshtml" />
-    <Content Include="Views\Home\OthersNameCard.cshtml" />
-    <Content Include="Views\Home\EditNameCard.cshtml" />
+    <Content Include="Views\NameCards\OwnNameCard.cshtml" />
+    <Content Include="Views\NameCards\OthersNameCard.cshtml" />
+    <Content Include="Views\NameCards\EditNameCard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
