--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -248,6 +248,7 @@
     <Content Include="Views\NameCards\OwnNameCard.cshtml" />
     <Content Include="Views\NameCards\OthersNameCard.cshtml" />
     <Content Include="Views\NameCards\EditNameCard.cshtml" />
+    <Content Include="Views\NameCards\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
