--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -185,6 +185,7 @@
     <Content Include="Content\CSS\bootstrap.css" />
     <Content Include="Content\CSS\bootstrap.min.css" />
     <Content Include="Content\CSS\namecard.css" />
+    <Content Include="Content\CSS\NewsFeed.css" />
     <Content Include="Content\Images\AddFollower.png" />
     <Content Include="Content\Images\addgroup.png" />
     <Content Include="Content\Images\DoubleMatch.png" />
@@ -249,6 +250,7 @@
     <Content Include="Views\NameCards\OthersNameCard.cshtml" />
     <Content Include="Views\NameCards\EditNameCard.cshtml" />
     <Content Include="Views\NameCards\Search.cshtml" />
+    <Content Include="Views\Home\NewsFeed.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
