delete branch newsfeed

--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -267,6 +267,7 @@
     <Content Include="Views\NameCards\Search.cshtml" />
     <Content Include="Views\Home\SearchGroups.cshtml" />
     <Content Include="Views\Home\NewsfeedGroups.cshtml" />
+    <Content Include="Views\Home\CheckMatch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
