--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -201,8 +201,13 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\CSS\Site.css" />
+    <Content Include="Myndir\add-group.jpg" />
+    <Content Include="Myndir\AddGroup.jpg" />
+    <Content Include="Myndir\AddGroups.jpg" />
     <Content Include="Myndir\Background.jpg" />
-    <Content Include="Myndir\black-heart.png" />
+    <Content Include="Myndir\remove-group.jpg" />
+    <Content Include="Myndir\RemoveGroup.jpg" />
+    <Content Include="Myndir\Unmatch.png" />
     <Content Include="Myndir\input.jpg" />
     <Content Include="Myndir\match.jpg" />
     <Content Include="Myndir\match.png" />
@@ -220,7 +225,6 @@
     <Content Include="Myndir\Matched.png" />
     <Content Include="Myndir\Mynd.png" />
     <Content Include="Myndir\Photo.png" />
-    <Content Include="Myndir\Plus_sign.png" />
     <Content Include="Myndir\search.jpg" />
     <Content Include="Myndir\takkar.jpg" />
     <Content Include="Myndir\TextLogo.png" />
