--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -196,9 +196,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\CSS\Site.css" />
-    <Content Include="Myndir\add-group.jpg" />
     <Content Include="Myndir\AddGroup.jpg" />
-    <Content Include="Myndir\AddGroups.jpg" />
     <Content Include="Myndir\Background.jpg" />
     <Content Include="Myndir\remove-group.jpg" />
     <Content Include="Myndir\RemoveGroup.jpg" />
@@ -209,14 +207,12 @@
     <Content Include="Myndir\minus.jpg" />
     <Content Include="Myndir\myndlogo.jpg" />
     <Content Include="Myndir\AddFollower.png" />
-    <Content Include="Myndir\addgroup.png" />
     <Content Include="Myndir\DoubleMatch.png" />
     <Content Include="Myndir\Edit.png" />
     <Content Include="Myndir\Followers.png" />
-    <Content Include="Myndir\groups.png" />
-    <Content Include="Myndir\leavegroup.png" />
-    <Content Include="Myndir\Like-a+¦.png" />
-    <Content Include="Myndir\logo.jpg" />
+    <Content Include="Myndir\Groups.png" />
+    <Content Include="Myndir\Liked.png" />
+    <Content Include="Myndir\Logo.jpg" />
     <Content Include="Myndir\Matched.png" />
     <Content Include="Myndir\Mynd.png" />
     <Content Include="Myndir\Photo.png" />
@@ -253,9 +249,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
@@ -265,9 +258,7 @@
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\Banner.cshtml" />
     <Content Include="Views\NameCards\OwnNameCard.cshtml" />
     <Content Include="Views\NameCards\OthersNameCard.cshtml" />
     <Content Include="Views\NameCards\EditNameCard.cshtml" />
@@ -278,7 +269,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\LoginRegister\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
