--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -186,8 +186,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\CSS\Banner.css" />
-    <Content Include="Content\CSS\bootstrap.css" />
-    <Content Include="Content\CSS\bootstrap.min.css" />
     <Content Include="Content\CSS\Matches.css" />
     <Content Include="Content\CSS\namecard.css" />
     <Content Include="Content\CSS\NewsfeedGroups.css" />
@@ -201,27 +199,26 @@
     <Content Include="Myndir\remove-group.jpg" />
     <Content Include="Myndir\RemoveGroup.jpg" />
     <Content Include="Myndir\Unmatch.png" />
-    <Content Include="Myndir\input.jpg" />
-    <Content Include="Myndir\match.jpg" />
+    <Content Include="Myndir\InputBoxBackground.jpg" />
+    <Content Include="Myndir\MatchList.jpg" />
     <Content Include="Myndir\match.png" />
     <Content Include="Myndir\minus.jpg" />
-    <Content Include="Myndir\myndlogo.jpg" />
+    <Content Include="Myndir\DefaultProfile.jpg" />
     <Content Include="Myndir\AddFollower.png" />
-    <Content Include="Myndir\DoubleMatch.png" />
     <Content Include="Myndir\Edit.png" />
     <Content Include="Myndir\Followers.png" />
     <Content Include="Myndir\Groups.png" />
-    <Content Include="Myndir\Liked.png" />
+    <Content Include="Myndir\Like.png" />
     <Content Include="Myndir\Logo.jpg" />
     <Content Include="Myndir\Matched.png" />
-    <Content Include="Myndir\Mynd.png" />
+    <Content Include="Myndir\PostPicture.png" />
     <Content Include="Myndir\Photo.png" />
-    <Content Include="Myndir\search.jpg" />
-    <Content Include="Myndir\takkar.jpg" />
-    <Content Include="Myndir\TextLogo.png" />
+    <Content Include="Myndir\SearchButton.jpg" />
+    <Content Include="Myndir\ButtonBackground.jpg" />
+    <Content Include="Myndir\PostText.png" />
     <Content Include="Myndir\UnFollow.png" />
     <Content Include="Myndir\UnLikeo¦êa+¦.png" />
-    <Content Include="Myndir\Video.png" />
+    <Content Include="Myndir\PostVideo.png" />
     <Content Include="Scripts\aWholeLottaJavascript.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
