--- a/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
+++ b/SozialWebApplication/SozialWebApplication/SozialWebApplication.csproj
@@ -196,13 +196,11 @@
     <Content Include="Content\CSS\Site.css" />
     <Content Include="Myndir\AddGroup.jpg" />
     <Content Include="Myndir\Background.jpg" />
-    <Content Include="Myndir\remove-group.jpg" />
     <Content Include="Myndir\RemoveGroup.jpg" />
     <Content Include="Myndir\Unmatch.png" />
     <Content Include="Myndir\InputBoxBackground.jpg" />
     <Content Include="Myndir\MatchList.jpg" />
-    <Content Include="Myndir\match.png" />
-    <Content Include="Myndir\minus.jpg" />
+    <Content Include="Myndir\Match.png" />
     <Content Include="Myndir\DefaultProfile.jpg" />
     <Content Include="Myndir\AddFollower.png" />
     <Content Include="Myndir\Edit.png" />
@@ -210,14 +208,12 @@
     <Content Include="Myndir\Groups.png" />
     <Content Include="Myndir\Like.png" />
     <Content Include="Myndir\Logo.jpg" />
-    <Content Include="Myndir\Matched.png" />
     <Content Include="Myndir\PostPicture.png" />
     <Content Include="Myndir\Photo.png" />
     <Content Include="Myndir\SearchButton.jpg" />
     <Content Include="Myndir\ButtonBackground.jpg" />
     <Content Include="Myndir\PostText.png" />
     <Content Include="Myndir\UnFollow.png" />
-    <Content Include="Myndir\UnLikeo¦êa+¦.png" />
     <Content Include="Myndir\PostVideo.png" />
     <Content Include="Scripts\aWholeLottaJavascript.js" />
     <Content Include="Scripts\bootstrap.js" />
